# gdfx

./: .gitmodules  CMakeLists.txt  CNAME  LICENSE.txt  README.md  _config.yml
examples/: CMakeLists.txt  Ex001_HelloWorld.cpp  Ex002_HelloImage.cpp  Ex003_HelloSound.cpp  Ex004_HelloMusic.cpp  Ex005_HelloPrimitives.cpp  Ex006_HelloInput.cpp  Ex007_HelloAnimation.cpp  appicon.icns
scripts/: build-debug.sh  build-release.sh
src/gdfx/audio/: Audio.cpp  Audio.hpp  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp
src/gdfx/content/: Content.cpp  Content.hpp  ContentLoadException.hpp  ContentManager.hpp
src/gdfx/game/: Game.cpp  Game.hpp
src/gdfx/graphics/: Animation.hpp  Color.cpp  Color.hpp  Graphics.cpp  Graphics.hpp  Image.cpp  Image.hpp  ImageRegion.cpp  ImageRegion.hpp  Sprite.cpp  Sprite.hpp
src/gdfx/input/: Input.cpp  Input.hpp
src/gdfx/math/: Bezier.cpp  Bezier.hpp  FastNoise.cpp  FastNoise.hpp  Math.cpp  Math.hpp  Matrix4.hpp  Random.cpp  Random.hpp  Rectangle.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/gdfx/platform/: Main.cpp  SDL3.hpp  SDLException.hpp  Storage.cpp  Storage.hpp  stb_image.h
